force-app/main/default/objects/QuotePicklistValueDisplayOverride__c/QuotePicklistValueDisplayOverride__c.object-meta.xml
<CustomObject>
    <label>Quote Picklist Value Display Override</label>
    <nameField>
        <displayFormat>Override-{00000}</displayFormat>
        <label>Quote Picklist Value Display Override</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Picklist Value Display Overrides</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>