force-app/main/default/objects/QuotePicklistValueDisplayOverride__c/fields/DisplayValue__c.field-meta.xml
<CustomField>
    <fullName>DisplayValue__c</fullName>
    <label>Display Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>