force-app/main/default/objects/QuotePicklistValueDisplayOverride__c/fields/FieldAPIName__c.field-meta.xml
<CustomField>
    <fullName>FieldAPIName__c</fullName>
    <label>Field API Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>