force-app/main/default/objects/QuotePicklistValueDisplayOverride__c/fields/OriginalValue__c.field-meta.xml
<CustomField>
    <fullName>OriginalValue__c</fullName>
    <label>Original Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>